--- a/sp_home_txt.html
+++ b/sp_home_txt.html
@@ -7,8 +7,8 @@
    Case Problem 1
    
    Slate & Pencil Home Page
-   Author: 
-   Date:   
+   Author: Alistair Wright
+   Date: April 3, 2023 
    
    Filename: sp_home.html
    -->
